# shunt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  notes.txt
.github/workflows/: ci.yml
cli/: CMakeLists.txt
cli/src/: app.cpp  app.hpp  main.cpp
ext/: CMakeLists.txt
lab/: CMakeLists.txt
lab/src/: main.cpp
lib/: CMakeLists.txt
lib/include/shunt/: binop.hpp  call.hpp  call_table.hpp  enum_array.hpp  interpreter.hpp  loc.hpp  operator.hpp  result.hpp  shunt.hpp  syntax_error.hpp  term.hpp  token.hpp  types.hpp  visitor.hpp
lib/include/shunt/runner/: printer.hpp  runner.hpp
lib/src/: binop.cpp  call_table.cpp  eval.hpp  evaluator.hpp  interpreter.cpp  operator.cpp  parser.hpp  runtime.hpp  scanner.hpp  shunt.cpp  syntax_error.cpp  term.cpp  token.cpp
lib/src/detail/: eval_sink.hpp  parser.hpp  rpn_sink.hpp  token_sink.hpp  tokenizer.hpp
lib/src/runner/: runner.cpp
tests/: CMakeLists.txt  nearly_eq.hpp  test_eval_sink.cpp  test_interpreter.cpp  test_parse_eval.cpp  test_parse_rpn.cpp  test_parser_rpn.cpp  test_tokenizer.cpp
